kubernetes/main/apps/flux-system/flux-operator/instance/github/webhooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN_NAME}
spec:
  ingressClassName: external-nginx
  rules:
    - host: &host "flux-receiver.${SECRET_DOMAIN_NAME}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
